added colision and counter

--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+    <nav id="center">
+        <div id="left">
+            <p class="win">WIN:</p>
+            <p id="wonTimes">Good luck!</p>
+        </div>
+        <div id="right">
+            <p class="win">LOST:</p>
+            <p id="lostTimes">You doing great!</p>
+        </div>
+    </nav>
+    <div id="game">
+        <script src="js/resources.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/engine.js"></script>
+    </div>
 </body>
 </html>
