fixed collision px and style.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav id="center">
+    <nav>
         <div id="left">
             <p class="win">WIN:</p>
             <p id="wonTimes">Good luck!</p>
